# doc-rag-mcp-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  TODO.md  docker-compose.yml  pyproject.toml  requirements-embed.txt  requirements.txt
.github/workflows/: build.yml  lint.yml  tests.yml
ci/: expected_manifest.example.json
config/: config.yaml
deploy/: etc-default-doc-rag.in  logrotate-doc-rag-mcp.in
docker/: Dockerfile
docs/: bench-results.md  cli.md  deploy.md  install.md  mcp.md  roadmap.md  troubleshooting.md  ui.md
docs/schemas/: blocks-v1.md
scripts/: backup.sh  bench.py  bootstrap.sh  check_manifest_remote.py  install_server_native.sh  install_torch_cpu.sh  install_torch_gpu.sh  make_deploy_archive.sh  print_global_mcp_config.sh  restore.sh  run_mcp.sh  run_mcp_http.sh  selfcheck.sh  verify_mcp.sh  write_global_mcp_config.py
scripts/rapidocr/: arch_config.yaml
sources/archived/: 13_1852e_CDV(IEC 62056-6-1 ED4).docx  IEC 61334-6-2000_A-XDR.docx  СТО 34.01-5.1-006-2023.docx
src/doc_rag/: cli.py
src/doc_rag/raglib/: audit_log.py  blocks.py  chunker_recursive.py  docling_backend.py  edition_year.py  filetype_detect.py  indexer.py  migrate_vectors.py  parsers.py  pipeline.py  quality.py  rag_generate.py  unstructured_backend.py  utils.py  vector_index.py
src/doc_rag/raglib/vectorstore/: __init__.py  factory.py  faiss_store.py  pgvector_store.py  qdrant_store.py
src/doc_rag/server/: generate_tool.py  http_server.py  logging_setup.py  mcp_cursor_http.json  mcp_http.json  mcp_http.py  metrics.py  retrieval.py  search_tool.py
src/doc_rag/tools/: __init__.py  base.py  registry.py  search.py
systemd/: doc-rag-mcp.service.in
tests/: conftest.py  test_audit_log.py  test_blocks.py  test_chunker_recursive.py  test_cli_destructive.py  test_corpus_fingerprint.py  test_dedup.py  test_degraded_mode.py  test_docling_backend.py  test_edition_year.py  test_faiss_reconstruct.py  test_filetype_detect.py  test_health_metrics.py  test_ingest_progress.py  test_mcp_http.py  test_ocr_indicator.py  test_parsers.py  test_quality.py  test_retrieval.py  test_schema_version.py  test_v4_rag.py  test_vector_index.py  test_vectorstore.py
tests/fixtures/: _build_sample_docx.py  sample.doc  sample.docx  sample.md
ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/src/: App.svelte  app.css  main.ts
ui/src/components/: Footer.svelte  Header.svelte  Sidebar.svelte
ui/src/lib/: api.ts  configSchema.ts  dotpath.ts  envSchema.ts  state.svelte.ts  types.ts
ui/src/pages/: Config.svelte  Docs.svelte  Documents.svelte  Logs.svelte  Manage.svelte
