[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-rag"
version = "1.0.0"
description = "Local-first RAG over your engineering documents, with an MCP server for Cursor and other clients."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{name = "doc-rag contributors"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Indexing",
]

dependencies = [
  "PyYAML>=6.0.1",
  "python-docx>=1.1.0",
  "numpy>=1.26",
  "tqdm>=4.66",
  "PyPDF2>=3.0.1",
]
[project.optional-dependencies]
# For remote MCP server over HTTP (FastAPI/Uvicorn)
server = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "python-multipart",
]

# Better PDF extraction (optional)
pdf = [
  "pymupdf>=1.24.0",
]

# OCR for scanned PDFs (requires Tesseract on PATH or parsing.ocr.tesseract_cmd)
ocr = [
  "pytesseract>=0.3.10",
  "Pillow>=10.0",
  "pymupdf>=1.24.0",
]

# Vector index (optional)
faiss = [
  "faiss-cpu>=1.8.0",
]

# Embeddings (optional) - CPU-safe default. GPU is installed manually by the user.
embeddings = [
  "sentence-transformers>=2.7.0",
  "torch>=2.0.0",
]

dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
]

# Prometheus /metrics endpoint (optional). Without this extra the
# endpoint exists but returns 503 with an informative body.
metrics = [
  "prometheus-client>=0.20",
]


[project.scripts]
doc-rag = "doc_rag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"doc_rag" = ["server/mcp_http.json", "server/mcp_cursor_http.json"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", ".venv", "doc_rag_for_habr"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  "E501",  # line too long — formatter handles wrapping where it can
  "B008",  # function call in default arg (FastAPI uses this pattern)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

