[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-rag"
version = "4.0.0"
description = "Local-first RAG over your engineering documents, with an MCP server for Cursor and other clients."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "doc-rag contributors"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Indexing",
]

dependencies = [
  "PyYAML>=6.0.1",
  "python-docx>=1.1.0",
  "numpy>=1.26",
  "tqdm>=4.66",
  "filetype>=1.2",
  # Docling — IBM Research's structure-aware document parser.
  # In v2.0 this is the only PDF backend; PyMuPDF and PyPDF2 are gone.
  # Brings ~600 MB of deps plus ~300 MB of ML models downloaded on
  # first parse. See docs/install.md and NOTICE for details.
  "docling>=2.0",
  # RapidOCR (via docling) defaults to onnxruntime engine; without it
  # the fallback torch engine requires a missing arch_config.yaml.
  "onnxruntime>=1.17",
]

[project.optional-dependencies]
# For remote MCP server over HTTP (FastAPI/Uvicorn)
server = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "python-multipart",
  # Round-trip YAML for the UI config form: preserves comments and
  # formatting when patching individual fields (PyYAML cannot).
  "ruamel.yaml>=0.18",
]

# Vector index (optional). Upper-bound at <1.14 because 1.14.x wheels
# require AVX/AVX2 and SIGILL on QEMU-virtualised hosts that only
# expose SSE4.2 (which is exactly the project's deployment target —
# misc-server is QEMU Virtual CPU). 1.13.x stays compatible.
faiss = [
  "faiss-cpu>=1.8.0,<1.14",
]

# Embeddings (optional).
#
# Upper bounds on `sentence-transformers` and `transformers` are
# load-bearing: ST 5.5.x assumes a `PreTrainedModel` import surface
# that `transformers>=5.8` no longer provides — the resulting
# ModuleNotFoundError is swallowed by `semantic_search`'s catch-all
# and silently degrades doc_search to lexical-only. Pin the pair to
# the last combination that pip resolved cleanly during the v2.0.x
# era; raise when a verified-working newer combo is available.
embeddings = [
  "sentence-transformers>=2.7.0,<5.5",
  "transformers>=4.0,<5.8",
  "torch>=2.0.0",
  # `torchvision` is a transitive of docling-ibm-models/rapidocr, but
  # listing it here makes it a direct dep so the CPU-only source
  # override in `[tool.uv.sources]` applies. Without this, uv pulls
  # the default-PyPI torchvision wheel whose compiled extensions are
  # ABI-incompatible with `torch+cpu` — sentence-transformers import
  # then dies on `RuntimeError: operator torchvision::nms does not exist`.
  "torchvision>=0.20",
]

dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "httpx>=0.27",  # required by starlette.testclient for FastAPI TestClient
  "ruff>=0.6",    # lint + format; pinned via uv.lock for reproducibility
]

# Prometheus /metrics endpoint (optional). Without this extra the
# endpoint exists but returns 503 with an informative body.
metrics = [
  "prometheus-client>=0.20",
]

# Unstructured (hi_res) — second-tier PDF fallback for the cascade
# parser (pdf_backend: cascade). Heavy dependency (~2 GB); only
# needed when cascade mode is enabled.
unstructured = [
  "unstructured[hi-res]>=0.15",
]


[project.scripts]
doc-rag = "doc_rag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"doc_rag" = ["server/mcp_http.json", "server/mcp_cursor_http.json"]

[tool.uv]
# CPU-only is the project's deployment policy (server is CPU-only;
# Docker image must not carry CUDA libs). Force torch off the PyTorch
# CPU index across all platforms; saves ~5 GB of nvidia-* transitives
# in the lockfile and the runtime image.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", ".venv", "doc_rag_for_habr"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  "E501",  # line too long — formatter handles wrapping where it can
  "B008",  # function call in default arg (FastAPI uses this pattern)
  "E402",  # module-level import after docstring/__future__ — intentional ordering
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
